--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art=""></canvas>
-		<script src="Build/Sharks.loader.js"></script>
+		<script src="Build/sharks2.loader.js"></script>
 		<script>
 			createUnityInstance(document.querySelector("#unity-canvas"), {
-				dataUrl: "Build/Sharks.data",
-				frameworkUrl: "Build/Sharks.framework.js",
-				codeUrl: "Build/Sharks.wasm",
+				dataUrl: "Build/sharks2.data",
+				frameworkUrl: "Build/sharks2.framework.js",
+				codeUrl: "Build/sharks2.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "DefaultCompany",
 				productName: "Masker",
