--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 <body>
 	<div id="gameContainer">
 		<canvas id="unity-canvas" data-pixel-art=""></canvas>
-		<script src="Build/sharksss.loader.js"></script>
+		<script src="Build/sharrrr.loader.js"></script>
 		<script>
 			createUnityInstance(document.querySelector("#unity-canvas"), {
-				dataUrl: "Build/sharksss.data",
-				frameworkUrl: "Build/sharksss.framework.js",
-				codeUrl: "Build/sharksss.wasm",
+				dataUrl: "Build/sharrrr.data",
+				frameworkUrl: "Build/sharrrr.framework.js",
+				codeUrl: "Build/sharrrr.wasm",
 				streamingAssetsUrl: "StreamingAssets",
 				companyName: "Aurora Edutainment",
 				productName: "Shark Attack",
